adicionar padding no link do ranking.

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -55,7 +55,9 @@ header {
     background: #651fff;
     border-bottom: 2px solid #1a237e;
 }
-
+header a {
+    padding-right: 30px;
+}
 footer{
     display: flex;
     flex-flow: column;
