--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -58,6 +58,66 @@ header {
 header a {
     padding-right: 30px;
 }
+.questions{
+    padding-top: 10vh;
+    display: flex;
+    justify-content: center;
+    height: 60vh;
+}
+.questions button {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #5c6bc0;
+  border: none;
+  border-top: 2px solid #303f9f;
+  text-decoration: none;
+}
+.caixa{
+    background: #2962ff;
+    padding: 0;
+    display: flex;
+    width: 50vw;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 2px solid #1a237e;
+    background: -moz-linear-gradient(top, #2962ff 0%, #3949ab 100%);
+    background: -webkit-linear-gradient(top, #2962ff 0%,#3949ab 100%);
+    background: linear-gradient(to bottom, #2962ff 0%,#3949ab 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2962ff', endColorstr='#3949ab',GradientType=0 );
+}
+.questions button:hover {
+  background: #283593;
+  text-decoration: none;
+}
+.questions respostas{
+    padding: 50px 0 0 0;
+    display: flex;
+    flex-direction: column;
+}
+.pergunta{
+    background: #311b92;
+    font-size: 1.2rem;
+    text-align: center;
+    height: 20%;
+    padding: 3px;
+}
+.top-part button{
+    background: #512da8;
+    border: 0;
+    font-size: 1.2rem;
+    border-top: 2px solid #1a237e
+}
+.top-part{
+    border-bottom: 2px solid #1a237e;
+}
+.questions span{
+    align-self: left;
+    display: inline;
+}
+.questions span button{
+    width: 100%;
+}
 footer{
     display: flex;
     flex-flow: column;
