--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -69,7 +69,7 @@ header {
     background: linear-gradient(to bottom, #4d68a1 0%,#3b5998 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998',GradientType=0 );
     border-bottom: 1px solid #133783;
-    height: 5vh;
+    height: 10vh;
 }
 header a {
     display: flex;
@@ -89,49 +89,56 @@ header .logo{
 .questions button {
   font-family: Arial;
   color: #ffffff;
-  font-size: 20px;
-  background: #5c6bc0;
-  border: none;
-  border-top: 2px solid #303f9f;
+  font-size: 1rem;
+  background: #4267B2;
+  border: 1px solid #6a89c8;
+  border-radius: 5px;
+  margin: 2px;
+  padding: 5px;
+  padding-right: 16px;
+  padding-left: 16px;
   text-decoration: none;
+  font-weight: bold;
+}
+.top-part{
+    background: #F6F7F9;
+    border: 2px #DFE0E4;
+    border-radius: 5px;
+    margin: 2px;
 }
 .caixa{
-    background: #2962ff;
-    padding: 0;
+    padding: 7px;
     display: flex;
     width: 50vw;
     flex-direction: column;
     justify-content: space-between;
-    border: 2px solid #1a237e;
-    background: -moz-linear-gradient(top, #2962ff 0%, #3949ab 100%);
-    background: -webkit-linear-gradient(top, #2962ff 0%,#3949ab 100%);
-    background: linear-gradient(to bottom, #2962ff 0%,#3949ab 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2962ff', endColorstr='#3949ab',GradientType=0 );
+    background: white;
+    border: 1px #DFE0E4;
+    border-radius: 5px;
 }
 .questions button:hover {
   background: #283593;
+  font-weight: bolder;
   text-decoration: none;
 }
 .questions respostas{
-    padding: 50px 0 0 0;
+    margin: 50px 0 0 0;
     display: flex;
     flex-direction: column;
 }
 .pergunta{
-    background: #311b92;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     text-align: center;
+    color: #365CAB;
     height: 100%;
     padding: 3px;
 }
 .top-part button{
-    background: #512da8;
-    border: 0;
-    font-size: 1.2rem;
-    border-top: 2px solid #1a237e
-}
-.top-part{
-    border-bottom: 2px solid #1a237e;
+    background: #4267B2;
+    border: 1px solid #6a89c8;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 .questions span{
     align-self: left;
