--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -69,7 +69,7 @@ header {
     background: linear-gradient(to bottom, #4d68a1 0%,#3b5998 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998',GradientType=0 );
     border-bottom: 1px solid #133783;
-    min-height: 10vh;
+    height: 10vh;
 }
 header a {
     display: flex;
@@ -231,28 +231,39 @@ footer article section{
         max-width: 90vw;
     }
 
-    .pergunta{
-        font-size: 0.8rem;
-    }
-    
-    .respostas button{
-        font-size: 0.6rem;
-    }
-
-    .top-part button{
-        font-size: 0.6rem;
-    }
-
-    .questions{
-        padding: 10px;
-    }
-
     .copyright {
         align-self: center;
     }
+    
+    header{
+        font-size: 0.9rem;
+        max-height: 15vh;
+    }
+
     header .logo{
+        font-size: 1.5rem;
         max-width: 70vw;
-        align-self: flex-start;
+    }
+
+    .questions{
+        width: 90vw;
+        height: 70vh;
+        margin: 5%;
+        padding: 2%;
+    }
+    .caixa{
+        width: 100%;
+        height: 100%;
+    }
+    
+    .pergunta{
+        font-size: 0.9rem;
+    }
+    .questions button{
+        font-size: 0.6rem;
+    }
+    .top-part button{
+        font-size: 0.6rem;
     }
 }
 
