--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@font-face{
+@font-face {
     font-family: 'Klavika';
     src: url('fonts/Klavika/Klavika.otf')
 }
+
 .center-title {
     display: flex;
     justify-content: center;
@@ -26,17 +27,20 @@ ol {
     margin: 0;
 }
 
-ol .nome{
+ol .nome {
     padding-top: 2px;
-    padding-bottom: 2px; 
+    padding-bottom: 2px;
 }
+
 .ranking-container {
     display: flex;
     justify-content: space-around;
 }
-.ranking-container ol{
+
+.ranking-container ol {
     width: 20vw;
 }
+
 * {
     box-sizing: border-box;
 }
@@ -59,61 +63,68 @@ a {
 }
 
 header {
-    display: flex; 
+    display: flex;
     width: 100vw;
     padding-top: 10px;
     padding-left: 10px;
     background: #4d68a1;
     background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: -webkit-linear-gradient(top, #4d68a1 0%,#3b5998 100%);
-    background: linear-gradient(to bottom, #4d68a1 0%,#3b5998 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998',GradientType=0 );
+    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
     border-bottom: 1px solid #133783;
-    height: 10vh;
 }
+
 header a {
     display: flex;
     align-self: center;
     padding: 5px;
     padding-right: 30px;
 }
-header .logo{
+
+header .logo {
     font-size: 2.3rem;
 }
-.questions{
+
+.questions {
     padding-top: 10vh;
     display: flex;
     justify-content: center;
     height: 70vh;
 }
-.insertPergunta{
+
+.insertPergunta {
     text-align: start;
     width: 50vw;
     height: 20vh;
 }
-.insertResposta{
+
+.insertResposta {
     text-align: start;
     width: 40vw;
     height: 10vh;
 }
+
 .questions button {
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 1rem;
-  background: #4267B2;
-  border: 1px solid #6a89c8;
-  border-radius: 5px;
-  margin: 2px;
-  padding: 5px;
-  padding-right: 16px;
-  padding-left: 16px;
-  text-decoration: none;
-  font-weight: bold;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 1rem;
+    background: #4267B2;
+    border: 1px solid #6a89c8;
+    border-radius: 5px;
+    margin: 2px;
+    padding: 5px;
+    padding-right: 16px;
+    padding-left: 16px;
+    text-decoration: none;
+    font-weight: bold;
 }
-.top-part{
+
+.top-part {
     margin: 4px;
 }
-.caixa{
+
+.caixa {
     padding: 7px;
     display: flex;
     width: 50vw;
@@ -123,17 +134,20 @@ header .logo{
     border: 1px #DFE0E4;
     border-radius: 5px;
 }
+
 .questions button:hover {
-  background: #283593;
-  font-weight: bolder;
-  text-decoration: none;
+    background: #283593;
+    font-weight: bolder;
+    text-decoration: none;
 }
-.questions respostas{
+
+.questions respostas {
     max-height: 50%;
     display: flex;
     flex-direction: column;
 }
-.pergunta{
+
+.pergunta {
     background: #F6F7F9;
     border: 2px #DFE0E4;
     border-radius: 5px;
@@ -142,7 +156,8 @@ header .logo{
     color: #365CAB;
     padding: 3px;
 }
-.top-part button{
+
+.top-part button {
     background: #4267B2;
     border: 1px solid #6a89c8;
     margin-top: 10px;
@@ -150,14 +165,17 @@ header .logo{
     font-size: 1.4rem;
     font-weight: bold;
 }
-.questions span{
+
+.questions span {
     align-self: left;
     display: inline;
 }
-.questions span button{
+
+.questions span button {
     width: 100%;
 }
-footer{
+
+footer {
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -165,14 +183,15 @@ footer{
     width: 100vw;
     background: #4d68a1;
     background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: -webkit-linear-gradient(top, #4d68a1 0%,#3b5998 100%);
-    background: linear-gradient(to bottom, #4d68a1 0%,#3b5998 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998',GradientType=0 );
+    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
     border-top: 1px solid #133783;
     color: white;
     align-self: flex-end;
 }
-footer article{
+
+footer article {
     display: flex;
     justify-content: space-around;
 }
@@ -182,21 +201,21 @@ footer .copyright {
     text-decoration: underline;
     background: #3f5c9a;
     background: -moz-linear-gradient(top, #3f5c9a 0%, #3e5b99 100%);
-    background: -webkit-linear-gradient(top, #3f5c9a 0%,#3e5b99 100%);
-    background: linear-gradient(to bottom, #3f5c9a 0%,#3e5b99 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#3e5b99',GradientType=0 );
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#214896',GradientType=0 );
+    background: -webkit-linear-gradient(top, #3f5c9a 0%, #3e5b99 100%);
+    background: linear-gradient(to bottom, #3f5c9a 0%, #3e5b99 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#3e5b99', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#214896', GradientType=0);
     justify-content: flex-start;
     font-style: italic;
 }
 
-footer article section{
+footer article section {
     max-width: 33vw;
 }
+
 .header-footer {
     margin: 0;
     margin-top: 5px;
-
 }
 
 .content-footer {
@@ -208,9 +227,10 @@ footer article section{
 .container {
     flex-grow: 3;
 }
-@media screen and (max-width: 600px){
-    footer article section{
-        max-width: 90vw;    
+
+@media screen and (max-width: 600px) {
+    footer article section {
+        max-width: 90vw;
         align-self: center;
     }
     footer article {
@@ -221,49 +241,41 @@ footer article section{
         flex-direction: column;
         justify-content: center;
     }
-
-    .ranking-container section{
+    .ranking-container section {
         align-self: center;
         max-width: 100vw;
     }
-
-    .ranking-container ol{
+    .ranking-container ol {
         max-width: 90vw;
     }
-
     .copyright {
         align-self: center;
     }
-    
-    header{
-        font-size: 0.9rem;
-        max-height: 15vh;
+    header {
+        font-size: 1rem;
+        flex-direction: column;
     }
-
-    header .logo{
+    header .logo {
         font-size: 1.5rem;
         max-width: 70vw;
     }
-
-    .questions{
+    .questions {
         width: 90vw;
         height: 70vh;
         margin: 5%;
         padding: 2%;
     }
-    .caixa{
+    .caixa {
         width: 100%;
         height: 100%;
     }
-    
-    .pergunta{
+    .pergunta {
+        font-size: 1.2rem;
+    }
+    .questions button {
         font-size: 0.9rem;
     }
-    .questions button{
-        font-size: 0.6rem;
-    }
-    .top-part button{
-        font-size: 0.6rem;
+    .top-part button {
+        font-size: 0.9rem;
     }
 }
-
