--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -3,6 +3,26 @@
     font-family: 'Klavika';
     src: url('fonts/Klavika/Klavika.otf')
 }
+.quizzes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.quizBox { 
+    background: #4d68a1;
+    background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
+    border: 1px solid #133783;
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+    width: 15%;
+    font-weight: bolder;
+    color: white;
+    text-decoration: none;
+}
 
 .g-signout2 {
     border-left: 2px white solid;
