--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -8,6 +8,65 @@
     padding: 10px;
 }
 
+.leftpart{
+    display: flex;
+    padding: 0.2rem;
+}
+
+.quizSearch{
+    font-size: 1.3rem;
+    color: #ffffff;
+    font-weight: bolder;
+    align-self: center;
+}
+
+.quizSearch > textarea{
+    height: 1.3rem;
+}
+
+.quizSearch > a{
+    padding: 0.1rem;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #ffffff;
+    color: #4d68a1;
+    border: 1px solid #365CAB;
+}
+
+.pagebuttons{
+    display: flex;
+    justify-content: space-around;
+    margin-left: 30vw;
+    margin-right: 30vw;
+}
+
+.readmore{
+    background: #4d68a1;
+    background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
+    font-size: 2rem;
+    border-radius: 50%;
+    padding: 20px;
+    text-align: center;
+    color: #F6F7F9;
+    margin-bottom: 10px;
+}
+
+.title{
+    text-align: center;
+    color: #365CAB;
+    font-size: 2.3rem;
+}
+
+.quizMenu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
 .menu-home {
     display: flex;
     flex-direction: column;
