atualização do CSS de ambas telas de menu e search
Atualização para fazer com que as telas citadas no título compartilhem das mesmas classes, evitando ter duas ou mais classes diferentes mas que fazem exatamente a mesma coisa

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -66,7 +66,7 @@
     font-size: 2.3rem;
 }
 
-.quizMenu{
+.page-div{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -146,7 +146,7 @@ criar-quiz {
 .quizzes > * {
     margin: 3rem;
 }
-.quizHeader{
+.title{
     font-weight: bolder;
     color: #365CAB;
     text-decoration: none;
