Melhorado display de quizzes, busca, e etc.

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -71,6 +71,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    padding-bottom: 5vh;
 }
 .menu-home {
     display: flex;
