--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -333,8 +333,9 @@ header .logo {
 .profile-pic {
     margin-right: 8px;
     border-radius: 50%;
-    max-width: 32px;
-    max-height: 32px;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 7px;
 }
 
 .questions {
