--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -86,6 +86,8 @@
     text-align: center;
     color: #365CAB;
     font-size: 2.3rem;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 
 .page-div {
@@ -363,7 +365,7 @@ header .logo {
 }
 
 .profile-pic {
-    margin-right: 8px;
+    margin-right: 0;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -679,6 +681,8 @@ button.resposta-button-inline {
 .foto-Edicao {
     max-height: 400px;
     max-width: 400px;
+    min-width: 50px;
+    min-height: 50px;
     margin: 20px 0 20px 0;
     align-self: center;
     border-radius: 50%;
