--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -679,8 +679,8 @@ button.resposta-button-inline {
 }
 
 .foto-Edicao {
-    max-height: 400px;
-    max-width: 400px;
+    max-height: 50%;
+    max-width: 50%;
     min-width: 50px;
     min-height: 50px;
     margin: 20px 0 20px 0;
@@ -693,10 +693,15 @@ button.resposta-button-inline {
     border: 1px solid #bdc7d8;
     border-radius: 5px;
 }
-.botao-salvar{
-    width: 75px;
-    height: 20px;
-    align-self: center;
+.botao-fechar-edicao{
+    font-size: 1.5rem;
+    color:#000000;
+    position: absolute;
+    left: 20px;
+    top: 15px;
+}
+.botao-salvar-edicao{
+    font-size:2rem;
 }
 
 @media screen and (max-width: 1015px) {
