--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -47,6 +47,7 @@
     border-radius: 10px;
     padding: 0.1rem;
     height: 2rem;
+    width: 280px;
 }
 
 .quizSearch>button {
@@ -58,6 +59,12 @@
     color: #4d68a1;
     cursor: pointer;
     border: 2px solid #133783;
+}
+
+.quizSearch>button:hover {
+    color: #ffffff;
+    background: #133783;
+    border: #ffffff 2px solid;
 }
 
 .pagebuttons {
@@ -367,6 +374,7 @@ header .logo {
 .profile-pic {
     margin-right: 0;
     border-radius: 50%;
+    border: 2px solid #133783;
     width: 50px;
     height: 50px;
     margin-bottom: 7px;
