Agora o usuário não pode buscar sem antes escrever algo na box. (lol)

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -348,6 +348,10 @@ header {
     justify-content: space-between;
 }
 
+header input:required {
+    box-shadow:none;
+
+}
 header a {
     display: flex;
     align-self: center;
