Alinhamento dos quizzes na home.

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -164,6 +164,11 @@ criar-quiz {
     margin-right: 5%;
 }
 
+.quizAnchor .quiztitle{
+    margin-bottom: 10px;
+    height: 40px;
+}
+
 .quizAnchor img {
     width: 300px;
     height: 200px;
