--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -109,7 +109,6 @@
     display: flex;
     flex-direction: column;
     width: 70vw;
-    height: 160vh;
     margin-top: 15vh;
     margin-bottom: 15vh;
     background: white;
@@ -218,7 +217,7 @@ criar-quiz {
     justify-content: flex-start;
 }
 
-.quizBox>.tags{
+.tags{
     font-size: 0.6rem;
     display: flex;
     flex-direction: row;
@@ -228,7 +227,7 @@ criar-quiz {
     height: 50px;
 }
 
-.quizBox>.tags>a{
+.tags>a{
     background: #C6EFFF;
     border:#4d68a1 1px solid;
     border-radius: 10px;
