--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -224,6 +224,7 @@ criar-quiz {
 
 .tags{
     font-size: 0.6rem;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
